--- a/intro-sentiment-analysis-2021.ipynb
+++ b/intro-sentiment-analysis-2021.ipynb
@@ -123,7 +123,7 @@
     "\n",
     "Download the following file to your computer (The Introduction to Origin of Species by Charles Darwin)\n",
     "\n",
-    "<a href=\"https://learn.edina.ac.uk/docs/origin-intro.txt\" download>https://learn.edina.ac.uk/docs/origin-intro.txt</a>\n",
+    "<a href=\"https://raw.githubusercontent.com/DCS-training/SentimentAnalysis/main/darwin-origin.txt\" download>https://raw.githubusercontent.com/DCS-training/SentimentAnalysis/main/darwin-origin.txt</a>\n",
     "\n",
     "Follow the link and when the file is displayed in the browser right-click and select 'save as..'\n",
     "\n",
@@ -507,7 +507,7 @@
     "\n",
     "Download this marked up text and upload to Noteable.\n",
     "\n",
-    "<a href=\"https://learn.edina.ac.uk/sentiment/files/austen-pride.txt\" download>https://learn.edina.ac.uk/sentiment/files/austen-pride.txt</a>\n",
+    "<a href=\"https://raw.githubusercontent.com/DCS-training/SentimentAnalysis/main/austen-pride-prejudice.txt\" download>https://raw.githubusercontent.com/DCS-training/SentimentAnalysis/main/austen-pride-prejudice.txt</a>\n",
     "\n",
     "### Analyse by Chapter\n",
     "\n",
@@ -626,11 +626,9 @@
    "source": [
     "## Further Exercises\n",
     "\n",
-    "Experiment by analysing different text files. A selection can be found on the workshop webpage (or use a file of you own choosing):\n",
+    "Experiment by analysing different text files. A selection can be found on this GitHub Repo",
     "\n",
-    "[https://learn.edina.ac.uk/sentiment](https://learn.edina.ac.uk/sentiment/)\n",
-    "\n",
-    "Once the file has been saved to your computer, go back to the Noteable home tab in the browser.\n",
+    "You can either save them on your pc and import them or import them directly from the GitHub Repo. If you are using Noteable, once the file has been saved to your computer, go back to the Noteable home tab in the browser.\n",
     "\n",
     "* Select 'Upload' from the top right of the page. \n",
     "* Browse to the file.\n",
