--- a/intro-sentiment-analysis-2021.ipynb
+++ b/intro-sentiment-analysis-2021.ipynb
@@ -201,10 +201,7 @@
    "source": [
     "### Try diffent text files\n",
     "\n",
-    "Experiment by analysing different text files. A selection can be found on the workshop home page (or use a file of you own choosing):\n",
-    "\n",
-    "[https://learn.edina.ac.uk/sentiment/](https://learn.edina.ac.uk/sentiment/)"
-   ]
+    "Experiment by analysing different text files. A selection can be found on the GitHub Repo
   },
   {
    "cell_type": "markdown",
@@ -218,7 +215,7 @@
     "\n",
     "Download the CSV from here and upload to Noteable.\n",
     "\n",
-    "<a href=\"https://learn.edina.ac.uk/sentiment/files/trump-tweets-2020.csv\" download>https://learn.edina.ac.uk/sentiment/files/trump-tweets-2020.csv</a>"
+    "<a href=\"https://github.com/DCS-training/SentimentAnalysis/edit/main/trump-tweets-2020.csv\" download>https://github.com/DCS-training/SentimentAnalysis/edit/main/trump-tweets-2020.csv.csv</a>"
    ]
   },
   {
