--- a/intro-sentiment-analysis-2021.ipynb
+++ b/intro-sentiment-analysis-2021.ipynb
@@ -201,8 +201,10 @@
    "source": [
     "### Try diffent text files\n",
     "\n",
-    "Experiment by analysing different text files. A selection can be found on the GitHub Repo
-  },
+        "Experiment by analysing different text files. A selection can be found on the workshop home page (or use a file of you own choosing):\n",
+    "\n",
+    "[https://learn.edina.ac.uk/sentiment/](https://learn.edina.ac.uk/sentiment/)"
+   ]
   {
    "cell_type": "markdown",
    "metadata": {},
