--- a/intro-sentiment-analysis-2021.ipynb
+++ b/intro-sentiment-analysis-2021.ipynb
@@ -201,10 +201,11 @@
    "source": [
     "### Try diffent text files\n",
     "\n",
-        "Experiment by analysing different text files. A selection can be found on the workshop home page (or use a file of you own choosing):\n",
+    "Experiment by analysing different text files. A selection can be found on the workshop home page (or use a file of you own choosing):\n",
     "\n",
     "[https://learn.edina.ac.uk/sentiment/](https://learn.edina.ac.uk/sentiment/)"
    ]
+  },
   {
    "cell_type": "markdown",
    "metadata": {},
@@ -217,7 +218,7 @@
     "\n",
     "Download the CSV from here and upload to Noteable.\n",
     "\n",
-    "<a href=\"https://github.com/DCS-training/SentimentAnalysis/edit/main/trump-tweets-2020.csv\" download>https://github.com/DCS-training/SentimentAnalysis/edit/main/trump-tweets-2020.csv.csv</a>"
+    "<a href=\"https://learn.edina.ac.uk/sentiment/files/trump-tweets-2020.csv\" download>https://learn.edina.ac.uk/sentiment/files/trump-tweets-2020.csv</a>"
    ]
   },
   {
@@ -506,7 +507,7 @@
     "\n",
     "Download this marked up text and upload to Noteable.\n",
     "\n",
-    "<a href=\"https://raw.githubusercontent.com/DCS-training/SentimentAnalysis/main/austen-pride.txt\" download>https://raw.githubusercontent.com/DCS-training/SentimentAnalysis/main/austen-pride.txt</a>\n",
+    "<a href=\"https://raw.githubusercontent.com/DCS-training/SentimentAnalysis/main/austen-pride-prejudice.txt\" download>https://raw.githubusercontent.com/DCS-training/SentimentAnalysis/main/austen-pride-prejudice.txt</a>\n",
     "\n",
     "### Analyse by Chapter\n",
     "\n",
