--- a/intro_sentiment_analysis_2025.ipynb
+++ b/intro_sentiment_analysis_2025.ipynb
@@ -13981,8 +13981,8 @@
     "    return TextBlob(text).sentiment.subjectivity\n",
     "\n",
     "# Also, this is a bit nicer than the way we wrote `get_polarity`:\n",
-    "# in stead of having variables whose only job is to carry a value\n",
-    "# from one line to the next, we can write a lottle more tersely \n",
+    "# instead of having variables whose only job is to carry a value\n",
+    "# from one line to the next, we can write a little more tersely \n",
     "# and do the whole thing with one line of code. Let's re-write\n",
     "# `get_polarity` in this style\n",
     "\n",
